// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneNumberField renders as expected 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": undefined,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      Array [
        undefined,
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "black",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "padding": 8,
        "width": "100%",
      }
    }
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={true}
      keyboardType="phone-pad"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="phoneNumberInput"
      value=""
    />
  </View>
</View>
`;

exports[`PhoneNumberField renders as expected when disabled 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "opacity": 0.6,
      },
      Array [
        undefined,
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "black",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "padding": 8,
        "width": "100%",
      }
    }
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={false}
      keyboardType="phone-pad"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="phoneNumberInput"
      value=""
    />
  </View>
</View>
`;

exports[`PhoneNumberField renders as expected with formatValue 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": undefined,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      Array [
        undefined,
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "black",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "padding": 8,
        "width": "100%",
      }
    }
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={true}
      keyboardType="phone-pad"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="phoneNumberInput"
      value="+123"
    />
  </View>
</View>
`;

exports[`PhoneNumberField renders as expected without formatValue 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": undefined,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      Array [
        undefined,
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "black",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "padding": 8,
        "width": "100%",
      }
    }
  >
    <TextInput
      accessible={true}
      autoCapitalize="none"
      editable={true}
      keyboardType="phone-pad"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "fontSize": 16,
          },
          undefined,
        ]
      }
      testID="phoneNumberInput"
      value="+123"
    />
  </View>
</View>
`;
